@@ -209,7 +209,7 @@ proc uni::main {} {
  * to the same alternate page number.
  */
 
-static unsigned char pageMap\[\] = {"
+static const unsigned char pageMap\[\] = {"
     set line "    "
     set last [expr {[llength $pMap] - 1}]
     for {set i 0} {$i <= $last} {incr i} {
@@ -231,7 +231,7 @@ static unsigned char pageMap\[\] = {"
  * set of character attributes.
  */
 
-static unsigned char groupMap\[\] = {"
+static const unsigned char groupMap\[\] = {"
     set line "    "
     set lasti [expr {[llength $pages] - 1}]
     for {set i 0} {$i <= $lasti} {incr i} {
@@ -270,7 +270,7 @@ static unsigned char groupMap\[\] = {"
  *			    highest field so we can easily sign extend.
  */
 
-static int groups\[\] = {"
+static const int groups\[\] = {"
     set line "    "
     set last [expr {[llength $groups] - 1}]
     for {set i 0} {$i <= $last} {incr i} {
